--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "chatGPT-Voice-Assistant"]
-	path = chatGPT-Voice-Assistant
-	url = https://github.com/colemount3/chatGPT-Voice-Assistant.git
+[submodule "chatGPT-VA"]
+	path = chatGPT-VA
+	url = https://github.com/colemount3/chatGPT-VA.git
